Compilation errors fixed, repcache code made 1.4 compatible.